# estat-aws-mcp-server

./: .gitignore  ANALYZE_WITH_ATHENA_FIX_REPORT.md  ATHENA_FIX_COMPLETE_REPORT.md  ATHENA_TOOLS_FIX_REPORT.md  ATHENA_TOOLS_USAGE_EXAMPLE.md  ATHENA_WORKGROUP_FIX_REPORT.md  AWS_CREDENTIALS_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_QUICK_START.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_QUICK_START.md  CREDENTIALS_QUICK_START.md  CSV_DOWNLOAD_DEPLOYMENT_SUMMARY.md  CSV_DOWNLOAD_ENHANCEMENT_REPORT.md  CSV_SAVE_FIX_DEPLOYMENT_REPORT.md  CSV_SAVE_FIX_REPORT.md  DATALAKE_CONSTRUCTION_COMPLETE.md  DATALAKE_CONSTRUCTION_REPORT.md  DATALAKE_DUPLICATE_DATA_FIX_REPORT.md  DATALAKE_NEW_TOOLS_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIONS_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEPLOY_CHECKLIST.md  DNS_VALIDATION_GUIDE.md  DOCKER_IMAGE_OPTIMIZATION.md  DOWNLOAD_CSV_FIX_REPORT.md  Dockerfile  Dockerfile.optimized  ECS_DEPLOYMENT_SUCCESS_V2.2.0.md  ECS_FARGATE_DEPLOYMENT_SUCCESS.md  ESTAT_API_TIMEOUT_ISSUE.md  ESTAT_AWS_DEPLOYMENT_SUMMARY.md  ESTAT_AWS_FULL_DEPLOYMENT_SUCCESS.md  ESTAT_AWS_IMPLEMENTATION_PROGRESS.md  ESTAT_AWS_IMPLEMENTATION_PROGRESS_UPDATED.md  ESTAT_AWS_PACKAGE_SUMMARY.md  ESTAT_AWS_REMOTE_SSE_FIX_REPORT.md  ESTAT_AWS_REMOTE_VERIFICATION_REPORT.md  ESTAT_AWS_REMOTE_機能説明.md  (+130 more)
datalake/: README.md  (+7 more)
estat-datalake-project/: .env.example  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
estat-datalake-project/datalake/: README.md  config_loader.py  data_quality_validator.py  error_handler.py  parallel_fetcher.py  schema_mapper.py
estat-datalake-project/datalake/config/: datalake_config.yaml  dataset_config.yaml
estat-datalake-project/docs/: API_REFERENCE.md  ARCHITECTURE.md  INDEX.md  SYSTEM_OVERVIEW.md  TOOLS_GUIDE.md  TROUBLESHOOTING.md
estat-datalake-project/mcp_server/: SETUP_GUIDE.md  server.py
(+93 files in other folders)
