[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estat-mcp-server"
version = "1.0.0"
description = "e-Stat Enhanced Analysis MCP Server with keyword suggestions and advanced scoring"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yukihiro Yamashita", email = "your.email@example.com"}
]
keywords = ["mcp", "estat", "statistics", "data-analysis", "japan", "government-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "requests>=2.28.0",
    "boto3>=1.26.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/estat-mcp-server"
Documentation = "https://github.com/yourusername/estat-mcp-server#readme"
Repository = "https://github.com/yourusername/estat-mcp-server"
Issues = "https://github.com/yourusername/estat-mcp-server/issues"

[project.scripts]
estat-mcp-server = "estat_mcp_server.server:main"

[tool.setuptools]
packages = ["estat_mcp_server"]

[tool.setuptools.package-data]
estat_mcp_server = ["*.json", "*.txt"]
